pokedex.css
:root {
	--attachment: fixed;
	--degrees: 115deg;
	--colorStop-1: 50%;
	--colorStop-2: calc(var(--colorStop-1) + 100px);
}
*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}
html::-webkit-scrollbar {
	display: none;
}
img {
	width: 100%;
}
body {
	max-width: 1920px;
	font-family: "Noto Sans KR", sans-serif;
	background-color: #fff;
	color: #282828;
	background-image: linear-gradient(
			var(--degrees),
			transparent var(--colorStop-1),
			#fe4d3e var(--colorStop-1) var(--colorStop-2),
			#fa7246 var(--colorStop-2)
		),
		radial-gradient(
			circle at 20% 70%,
			rgb(239 208 234 / 0.9),
			rgb(234 201 242 / 0.6),
			rgb(231 238 197 / 0.6),
			rgb(205 240 219 / 0.6),
			rgb(231 237 245 / 0.6)
		);
	background-attachment: var(--attachment);
	min-height: 100vh;
	overflow: hidden;
}
.header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	background-image: linear-gradient(
		115deg,
		rgba(50 0 0 / 0.15) var(--colorStop-1),
		rgb(53 53 53) var(--colorStop-1)
	);
	background-attachment: var(--attachment);
	margin-top: 10px;
}
.header h1 {
	font-size: 2rem;
	padding-left: 1rem;
}
.header p {
	font-size: 1.5rem;
	color: white;
	padding-right: 13%;
}
.pokedex {
	position: relative;
	display: flex;
	justify-content: flex-end;
	align-items: center;
}
.gen-select {
	position: absolute;
	bottom: 20px;
	left: 20px;
	display: flex;
	gap: 12px;
}

.gen-select input {
	position: relative;
	width: 35px;
	aspect-ratio: 1;
	cursor: pointer;
	transition: margin-right 0.2s ease-in-out, scale 0.2s ease-in-out;
	transform-origin: center left;
}
.gen-select input::before,
.gen-select input::after {
	position: absolute;
	content: "";
	inset: 0;
	aspect-ratio: 1;
	border-radius: 100vw;
	--gradient-3-versions: linear-gradient(
		120deg,
		var(--color-version-1) 40%,
		var(--color-version-2) 40% 60%,
		var(--color-version-3) 60%
	);
	--gradient-2-versions: linear-gradient(
		120deg,
		var(--color-version-1) 50%,
		var(--color-version-2) 50%
	);
}
.gen-select input:hover,
.gen-select input:checked {
	scale: 1.5;
	margin-right: 20px;
}
.gen-select input:checked::after {
	border: 5px solid transparent;
	border-top: 2px solid #000000aa;
	border-bottom: 2px solid #000000aa;
	scale: 1.3;
	animation: rotation 700ms cubic-bezier(0.82, 0.22, 0.49, 0.61) infinite;
}
@keyframes rotation {
	to {
		rotate: 360deg;
	}
}
/* Gen 1 */
#gen-1::before {
	--color-version-1: #e23a19;
	--color-version-2: #e5c31a;
	--color-version-3: #3971da;
	background-image: var(--gradient-3-versions);
}
/* Gen 2 */
#gen-2::before {
	--color-version-1: #f6c422;
	--color-version-2: #6f55e3;
	--color-version-3: #abb4c9;
	background-image: var(--gradient-3-versions);
}
/* Gen 3 */
#gen-3::before {
	--color-version-1: #e54830;
	--color-version-2: #37dd2b;
	--color-version-3: #0070b7;
	background-image: var(--gradient-3-versions);
}

/* Gen 4 */
#gen-4::before {
	--color-version-1: #97d7e3;
	--color-version-2: #303336;
	--color-version-3: #bd56b7;
	background-image: var(--gradient-3-versions);
}
/* Gen 5 */
#gen-5::before {
	--color-version-1: #f0f6f4;
	--color-version-2: #272524;
	background-image: var(--gradient-2-versions);
}
/* Gen 6 */
#gen-6::before {
	--color-version-1: #f1a9c6;
	--color-version-2: #221717;
	background-image: var(--gradient-2-versions);
}
/* Gen 7 */
#gen-7::before {
	--color-version-1: #ff9f31;
	--color-version-2: #4f3f9e;
	background-image: var(--gradient-2-versions);
}
/* Gen 8 */
#gen-8::before {
	--color-version-1: #02acee;
	--color-version-2: #ed0e65;
	background-image: var(--gradient-2-versions);
}
/* Gen 9 */
#gen-9::before {
	--color-version-1: #eb3b4f;
	--color-version-2: #781984;
	background-image: var(--gradient-2-versions);
}
/* Formes Alt */
#gen-10 {
	visibility: hidden;
}
#gen-10::before {
	--color-version-1: #eb3b4f;
	--color-version-2: #781984;
	background-image: radial-gradient(white 21%, black 21% 25%, transparent 25%),
		linear-gradient(
			red 41%,
			black 41% 44%,
			white 44% 56%,
			black 56% 59%,
			white 59%
		);
}
.shiny-button {
	position: absolute;
	left: 20px;
	top: 20px;
	width: 5rem;
	filter: drop-shadow(5px 5px 0 rgba(130, 217, 211, 0.408));
	cursor: pointer;
	z-index: 10;
}
div:has(.pokemon-3Dmodel) {
	display: flex;
	justify-content: center;
	align-items: center;
	margin-inline: auto;
}
.pokemon-3Dmodel {
	filter: drop-shadow(10px 10px 2px #39393951);
}
.pokemon-list {
	min-width: 400px;
	width: 100%;
	max-width: 520px;
	height: calc(100vh - 56px);
	overflow-y: scroll;
	display: flex;
	flex-direction: column;
	gap: 15px;
	padding: 20px 10px 20px 0;
	margin-right: 20px;
}
.pokemon-list::-webkit-scrollbar {
	display: none;
}
.pokemon {
	display: flex;
	justify-content: space-between;
	align-items: center;
	text-transform: capitalize;
	text-align: center;
	padding: 0 10px 0 0;
	color: black;
	font-weight: 500;
	font-size: 1.3rem;
	border-radius: 100vw;
	cursor: pointer;
}
.pokemon:hover,
.pokemon-active {
	background-image: linear-gradient(115deg, #f04f17 45%, black 45%);
	color: white;
}
.pokemon-active {
	position: relative;
}
.pokemon-active .pokemon__sprite {
	animation: pokemon_jump 0.24s ease-in-out 2;
}
@keyframes pokemon_jump {
	from,
	to {
		translate: 0;
	}
	50% {
		translate: 0 -10px;
	}
}
.pokemon__name {
	padding: 0 0.5rem;
}
.pokeball {
	animation-play-state: paused;
	aspect-ratio: 1;
}
.pokemon-active .pokeball {
	animation: rotate 1600ms infinite linear;
	animation-play-state: running;
}

@keyframes rotate {
	to {
		rotate: 360deg;
	}
}
.pokemon > div:first-of-type {
	display: flex;
	align-items: center;
}
.pokemon__sprite {
	width: 60px;
	scale: 1.2;
	transform-origin: bottom;
	margin-inline: 10px;
}
.pokemon__num {
	display: flex;
}
.pokemon__num--field {
	margin-left: 0.5rem;
}
.pokeball {
	width: 25px;
	height: 25px;
	display: flex;
}
@media screen and (width < 992px) {
	.pokedex {
		flex-direction: column;
		height: calc(100vh - 46px);
	}
	.gen-select {
		top: 20px;
		right: 20px;
		gap: 10px 25px;
		bottom: initial;
		left: initial;
		flex-direction: column;
	}
	@media screen and (width < 600px) {
		.gen-select {
			flex-wrap: wrap-reverse;
			height: 255px;
		}
		.gen-select {
			opacity: 0.5;
			transition: all 0.3s;
		}
		.gen-select:hover {
			opacity: 1;
		}
	}
	.gen-select input {
		transform-origin: top center;
		transition: margin-bottom 0.2s ease-in-out, scale 0.2s ease-in-out;
	}
	.gen-select input:hover {
		z-index: 20;
	}
	.gen-select input:hover,
	.gen-select input:checked {
		margin-bottom: 20px;
		margin-right: 0;
	}
	.shiny-button {
		width: 4rem;
	}
	div:has(.pokemon-3Dmodel) {
		max-width: 475px;
		padding: 0 20px;
	}
	.pokemon-list {
		height: calc(100vh - 451px);
		margin-inline: auto;
		padding-right: 0;
	}
	@media screen and (width < 400px) {
		.pokemon-list {
			width: 100%;
			min-width: initial;
		}
		.pokeball {
			display: none;
		}
	}
}

